--- a/app/src/main/res/layout/activity_material_design_ex.xml
+++ b/app/src/main/res/layout/activity_material_design_ex.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MaterialDesignEx">
+    tools:context=".MaterialDesignEx"
+    android:id="@+id/parent">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,6 +14,15 @@
         android:text="SAY HELLO"
         android:backgroundTint="@color/orange"
         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange"
+        android:layout_centerHorizontal="true"
+        android:text="Snack Bar"
+        android:layout_marginTop="40dp"
+        android:id="@+id/button1"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatButton"
