--- a/app/src/main/res/layout/activity_material_design_ex.xml
+++ b/app/src/main/res/layout/activity_material_design_ex.xml
@@ -7,22 +7,130 @@
     tools:context=".MaterialDesignEx"
     android:id="@+id/parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="SAY HELLO"
-        android:backgroundTint="@color/orange"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            >
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/orange"
+                android:layout_centerHorizontal="true"
+                android:text="Snack Bar"
+                android:layout_marginTop="10dp"
+                android:id="@+id/button1"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/orange"
-        android:layout_centerHorizontal="true"
-        android:text="Snack Bar"
-        android:layout_marginTop="40dp"
-        android:id="@+id/button1"/>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_below="@+id/button1"
+                android:id="@+id/materialCardView"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/contactInfo">
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:layout_centerHorizontal="true"
+                            android:id="@+id/image"
+                            android:src="@drawable/ic_profile"
+                            android:layout_marginLeft="20dp"/>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:id="@+id/contactName"
+                                android:text="Fredrick Wampamba"
+                                android:textSize="17dp"
+                                android:textStyle="normal|bold"
+                                android:layout_centerHorizontal="true"
+                                android:textAlignment="center"
+                                />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="5dp"
+                                android:id="@+id/phoneNumber"
+                                android:text="+256 702718025"
+                                android:layout_below="@+id/contactName"
+                                android:textSize="20sp"
+                                android:layout_centerHorizontal="true"
+                                android:textAlignment="center"
+                                />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="5dp"
+                                android:id="@+id/email"
+                                android:textStyle="italic|bold"
+                                android:text="fredrickwampamba1@gmail.com"
+                                android:layout_below="@+id/phoneNumber"
+                                android:textSize="14sp"
+                                android:layout_centerHorizontal="true"
+                                android:textAlignment="center"
+                                />
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/actions"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/contactInfo">
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Call"
+                            android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:backgroundTint="@color/green"
+                            style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:text="Email"
+                            android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:backgroundTint="@color/blue"
+                            style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:text="Delete"
+                            android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:backgroundTint="@color/red"
+                            style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+                    </LinearLayout>
+
+                </RelativeLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+        </RelativeLayout>
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatButton"
