--- a/app/src/main/res/layout/contact_listing_new.xml
+++ b/app/src/main/res/layout/contact_listing_new.xml
@@ -1,5 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parent"
+    app:cardElevation='5dp'
+    app:cardCornerRadius="5dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="5dp"
+    >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/contactInfo">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginVertical="15dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/image"
+                android:layout_weight="1"
+                android:src="@drawable/ic_profile"
+                android:layout_marginLeft="10dp"/>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/informationHolder"
+                android:layout_weight="11">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:id="@+id/contactName"
+                    android:text="Fredrick Wampamba"
+                    android:textSize="17dp"
+                    android:textStyle="normal|bold"
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:id="@+id/phoneNumber"
+                    android:text="+256 702718025"
+                    android:layout_below="@+id/contactName"
+                    android:textSize="14sp"
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:id="@+id/email"
+                    android:textStyle="italic|bold"
+                    android:text="fredrickwampamba1@gmail.com"
+                    android:layout_below="@+id/phoneNumber"
+                    android:textSize="14sp"
+                    android:layout_centerHorizontal="true"
+                    android:textAlignment="center"
+                    />
+
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Call"
+                    android:id="@+id/call"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/green"
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="Email"
+                    android:id="@+id/Email"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/blue"
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="Delete"
+                    android:textSize="13sp"
+                    android:id="@+id/Delete"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/red"
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+            </LinearLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
