--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF9800</color>
+    <color name="red">#F52D1F</color>
+    <color name="green">#12E519</color>
+    <color name="blue">#0943F3</color>
 </resources>
