--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -7,17 +7,16 @@
     tools:context=".ListViewEx">
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:entries="@array/names"/>
+        android:entries="@array/names" />
 
     <ListView
+        android:id="@+id/listXMl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listXMl"
-        android:layout_below="@+id/spinner"
-        />
+        android:layout_below="@+id/spinner" />
 </RelativeLayout>
