--- a/app/src/main/res/layout/activity_recycler_view_ex.xml
+++ b/app/src/main/res/layout/activity_recycler_view_ex.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecyclerViewEx"
-    android:padding="10dp">
+    android:padding="10dp"
+    tools:context=".RecyclerViewEx">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/recyc"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
