--- a/app/src/main/res/layout/contact_listing_new.xml
+++ b/app/src/main/res/layout/contact_listing_new.xml
@@ -1,116 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent"
-    app:cardElevation='5dp'
-    app:cardCornerRadius="5dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
-    >
+    app:cardCornerRadius="5dp"
+    app:cardElevation='5dp'>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        >
+        android:layout_marginHorizontal="10dp">
+
         <LinearLayout
+            android:id="@+id/contactInfo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/contactInfo">
+            android:layout_height="wrap_content">
+
             <ImageView
+                android:id="@+id/image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginVertical="15dp"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/image"
+                android:layout_marginVertical="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_profile"
-                android:layout_marginLeft="10dp"/>
+                android:src="@drawable/ic_profile" />
 
             <RelativeLayout
+                android:id="@+id/informationHolder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/informationHolder"
                 android:layout_weight="11">
+
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:id="@+id/contactName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="10dp"
                     android:text="Fredrick Wampamba"
+                    android:textAlignment="center"
                     android:textSize="17dp"
-                    android:textStyle="normal|bold"
-                    android:layout_centerHorizontal="true"
-                    android:textAlignment="center"
-                    />
+                    android:textStyle="normal|bold" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:id="@+id/phoneNumber"
-                    android:text="+256 702718025"
-                    android:layout_below="@+id/contactName"
-                    android:textSize="14sp"
-                    android:layout_centerHorizontal="true"
-                    android:textAlignment="center"
-                    />
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:id="@+id/email"
-                    android:textStyle="italic|bold"
-                    android:text="fredrickwampamba1@gmail.com"
-                    android:layout_below="@+id/phoneNumber"
-                    android:textSize="14sp"
+                    android:layout_below="@+id/contactName"
                     android:layout_centerHorizontal="true"
+                    android:layout_margin="5dp"
+                    android:text="+256 702718025"
                     android:textAlignment="center"
-                    />
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/phoneNumber"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="5dp"
+                    android:text="fredrickwampamba1@gmail.com"
+                    android:textAlignment="center"
+                    android:textSize="14sp"
+                    android:textStyle="italic|bold" />
 
             </RelativeLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Call"
                     android:id="@+id/call"
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
-                    android:textColor="@color/white"
                     android:backgroundTint="@color/green"
-                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+                    android:text="Call"
+                    android:textColor="@color/white" />
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="Email"
                     android:id="@+id/Email"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:backgroundTint="@color/blue"
-                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
-
-                <Button
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:text="Delete"
-                    android:textSize="13sp"
-                    android:id="@+id/Delete"
                     android:layout_weight="1"
-                    android:textColor="@color/white"
+                    android:backgroundTint="@color/blue"
+                    android:text="Email"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/Delete"
+                    style="@style/Widget.MaterialComponents.FloatingActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
                     android:backgroundTint="@color/red"
-                    style="@style/Widget.MaterialComponents.FloatingActionButton"/>
+                    android:text="Delete"
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
             </LinearLayout>
         </LinearLayout>
 
