--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,6 +134,14 @@
                 android:layout_below="@id/recView"
                 android:layout_centerHorizontal="true"
                 android:text="Card Recycler View" />
+
+            <Button
+                android:id="@+id/fonts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recView"
+                android:layout_centerHorizontal="true"
+                android:text="Fonts" />
         </RelativeLayout>
     </ScrollView>
 
